test/class/invalid/doubleDecOfClass.wacc
begin
  class Dog is 
   int x;

   init (int x) is
    self.x = x
   end

  end

  class Dog is
   int y;
  
   init(int y) is
    self.y = y
   end
  
  end

  println 1
end
